syntax = "proto3";
package grpc;

option go_package = "pb/";

service ListingService {
    // call from owner side
    rpc GetAllListings (GetAllListingsRequest) returns (GetAllListingsResponse);//
    rpc GetOptions (GetOptionsRequest) returns (GetOptionsResponse);//
    rpc GetBaseFeatures (GetBaseFeaturesRequest) returns (GetBaseFeaturesResponse);
    rpc StartListing (StartListingRequest) returns (StartListingResponse);//
    rpc UpdateListing (UpdateListingRequest) returns (UpdateListingResponse);//
    rpc EndUpdateListing (EndUpdateListingRequest) returns (EndUpdateListingResponse);//
    rpc GetListingStatus (GetListingStatusRequest) returns (GetListingStatusResponse);//
    rpc ApproveListing (ApproveListingRequest) returns (ApproveListingResponse);//
    rpc RejectListing (RejectListingRequest) returns (RejectListingResponse);//
    rpc SuspendListing (SuspendListingRequest) returns (SuspendListingResponse);//
    rpc ReleaseListing (ReleaseListingRequest) returns (ReleaseListingResponse);//
    rpc DeleteListing (DeleteListingRequest) returns (DeleteListingResponse);//
    rpc CopyListing (CopyListingRequest) returns (CopyListingResponse);//
    rpc ApproveVisting (ApproveVistingRequest) returns (ApproveVistingResponse);//
    rpc RejectVisting (RejectVistingRequest) returns (RejectVistingResponse);//
    rpc ApproveOffer (ApproveOfferRequest) returns (ApproveOfferResponse);//
    rpc RejectOffer (RejectOfferRequest) returns (RejectOfferResponse);//
    rpc EvaluateRealtor (EvaluateRealtorRequest) returns (EvaluateRealtorResponse);//

    //call from realtor side
    rpc ShareListing (ShareListingRequest) returns (ShareListingResponse);//
    rpc GetFavoriteListings (GetFavoriteListingsRequest) returns (GetFavoriteListingsResponse);//
    rpc AddFavoriteListing (AddFavoriteListingRequest) returns (AddFavoriteListingResponse);//
    rpc RemoveFavoriteListing (RemoveFavoriteListingRequest) returns (RemoveFavoriteListingResponse);//
    rpc RequestVisit (RequestVisitRequest) returns (RequestVisitResponse);//
    rpc CancelVisit (CancelVisitRequest) returns (CancelVisitResponse);//
    rpc ConfirmVisitDone (ConfirmVisitDoneRequest) returns (ConfirmVisitDoneResponse);//
    rpc EvaluateOwner (EvaluateOwnerRequest) returns (EvaluateOwnerResponse);//
    rpc CreateOffer (CreateOfferRequest) returns (CreateOfferResponse);//
    rpc UpdateOffer (UpdateOfferRequest) returns (UpdateOfferResponse);//
    rpc SendOffer (SendOfferRequest) returns (SendOfferResponse);//
    rpc CancelOffer (CancelOfferRequest) returns (CancelOfferResponse);//

    //call from both sides
    rpc SearchListing (SearchListingRequest) returns (SearchListingResponse);//
    rpc GetListing (GetListingRequest) returns (GetListingResponse);//
    rpc GetAllVisits (GetAllVisitsRequest) returns (GetAllVisitsResponse);//
    rpc GetVisits (GetVisitsRequest) returns (GetVisitsResponse);//
    rpc GetAllOffers (GetAllOffersRequest) returns (GetAllOffersResponse);//
    rpc GetOffers (GetOffersRequest) returns (GetOffersResponse);//

}

message GetAllListingsRequest {}

message GetAllListingsResponse {
    repeated Listing listings = 1;
}

message GetOptionsRequest {
    string zip_code = 1;
    string number = 2;
}

message GetOptionsResponse {
    repeated int64 property_types = 1;
}

message GetBaseFeaturesRequest {}

message GetBaseFeaturesResponse {
    repeated BaseFeature features = 1;
}

message StartListingRequest {
    string zip_code = 1;
    string number = 2;
    int64 property_type = 3;
}

message StartListingResponse {
    int64 id = 1;
}

message UpdateListingRequest {
    Listing listing = 1;
}

message UpdateListingResponse {}

message EndUpdateListingRequest {
    int64 id = 1;
}

message EndUpdateListingResponse {
    repeated Error errors = 1;
}

message GetListingStatusRequest {
    int64 id = 1;
}

message GetListingStatusResponse {
    string status = 1;
}

message ApproveListingRequest {
    int64 id = 1;
}

message SearchListingRequest {
  Listing listing_to_search = 1;
}

message SearchListingResponse {
  repeated Listing listings = 1;
}

message GetListingRequest {
    int64 id = 1;
}

message GetListingResponse {
    Listing listing = 1;
}

message ShareListingRequest {
    int64 id = 1;
    string email = 2;
    string phone_number = 3;
}

message ShareListingResponse {}

message GetFavoriteListingsRequest {}

message GetFavoriteListingsResponse {
    repeated Listing listings = 1;
}

message AddFavoriteListingRequest {
    int64 id = 1;
}

message AddFavoriteListingResponse {}

message RemoveFavoriteListingRequest {
    int64 id = 1;
}

message RemoveFavoriteListingResponse {}

message ApproveListingResponse {}

message RejectListingRequest {
    int64 id = 1;
}

message RejectListingResponse {
    string reason = 1;
}

message SuspendListingRequest {
    int64 id = 1;
}

message SuspendListingResponse {}

message ReleaseListingRequest {
    int64 id = 1;
}

message ReleaseListingResponse {}

message DeleteListingRequest {
    int64 id = 1;
}

message DeleteListingResponse {}

message CopyListingRequest {
    int64 id = 1;
}

message CopyListingResponse {
    int64 id = 1;
}

message GetAllVisitsRequest {}

message GetAllVisitsResponse {
    repeated Visit visits = 1;
}

message GetVisitsRequest {
    int64 listing_id = 1;
}

message GetVisitsResponse {
    repeated Visit visits = 1;
}

message RequestVisitRequest {
    int64 listing_id = 1;
    string date = 2;
    string time = 3;
}

message RequestVisitResponse {}

message CancelVisitRequest {
    int64 id = 1;
}

message CancelVisitResponse {}

message ConfirmVisitDoneRequest {
    int64 id = 1;
}

message ConfirmVisitDoneResponse {}

message EvaluateOwnerRequest {
    int64 id = 1;
    int32 rating = 2;
    string comment = 3;
}

message EvaluateOwnerResponse {}

message ApproveVistingRequest {
    int64 id = 1;
}

message ApproveVistingResponse {}

message RejectVistingRequest {
    int64 id = 1;
}

message RejectVistingResponse {
    string reason = 1;
}

message CreateOfferRequest {
    Offer offer = 1;
}

message CreateOfferResponse {
    int64 id = 1;
}

message UpdateOfferRequest {
    Offer offer = 1;
}

message UpdateOfferResponse {}

message SendOfferRequest {
    int64 id = 1;
}

message SendOfferResponse {}

message CancelOfferRequest {
    int64 id = 1;
}

message CancelOfferResponse {}

message GetAllOffersRequest {}

message GetAllOffersResponse {
    repeated Offer offers = 1;
}

message GetOffersRequest {
    int64 listing_id = 1;
}

message GetOffersResponse {
    repeated Offer offers = 1;
}

message ApproveOfferRequest {
    int64 id = 1;
}

message ApproveOfferResponse {}

message RejectOfferRequest {
    int64 id = 1;
}

message RejectOfferResponse {
    string reason = 1;
}

message EvaluateRealtorRequest {
    int64 id = 1;
    int32 rating = 2;
    string comment = 3;
}

message EvaluateRealtorResponse {}

message BaseFeature {
    int64 id = 1;
    string feature = 2;
    string description = 3;
}


message Offer {
    int64 id = 1;
    int64 listing_id = 2;
    float value = 3;
    string date = 4;
    string time = 5;
    string realtor_id = 6;
    string owner_id = 7;
    int64 status = 8;
}


message Visit {
    int64 id = 1;
    int64 listing_id = 2;
    int64 status = 3;
    string date = 4;
    string time = 5;
    string realtor_id = 6;
    string owner_id = 7;
}

message Error {
    string field = 1;
    string error = 2;
}

message Feature {
    int64 id = 1;
    int64 qty = 2;
}

message Place {
    int64 id = 1;
    int64 listing_id = 2;
    string neighborhood = 3;
    string city = 4;
    string state = 5;
}

message Listing {
    int64 id = 1;
    uint32 code = 2;
    uint32 version = 3;
    int64 status = 4;
    string zip_code = 5;
    string street = 6;
    string complement = 7;
    string neighborhood = 8;
    string city = 9;
    string state = 10;
    int64 listingType = 11;
    int64 owner = 12;
    repeated Feature features = 13;
    float landsize = 14;
    bool corner = 15;
    float nonBuildable = 16;
    float buildable = 17;
    int64 delivered = 18;
    int64 whoLives = 19;
    string description = 20;
    int64 transaction = 21;
    float sellNet = 22;
    float rentNet = 23;
    float condominium = 24;
    float annualTax = 25;
    float annualGroundRent = 26;
    bool exchange = 27;
    float exchangePercentual = 28;
    repeated Place exchangePlaces = 29;
    int64 installment = 30;
    bool financing = 31;
    repeated int64 financingBlockers = 32;
    repeated int64 guarantees = 33;
    int64 visit = 34;
    string tenantName = 35;
    string tenantEmail = 36;
    string tenantPhone = 37;
    int64 accompanying = 38;
}
